--- a/text_class.ipynb
+++ b/text_class.ipynb
@@ -6,7 +6,8 @@
       "name": "text_class.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rajkhatana/BBC-articles-Classification/blob/master/text_class.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -39,7 +50,7 @@
         "nltk.download('stopwords')\n",
         "%matplotlib inline"
       ],
-      "execution_count": 242,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,7 +78,7 @@
         "df = pd.read_csv(\"bbc-text.csv\")\n",
         "df.head(10)"
       ],
-      "execution_count": 243,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -185,7 +196,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 244,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -215,7 +226,7 @@
       "source": [
         "df['text'][0]"
       ],
-      "execution_count": 245,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +256,7 @@
       "source": [
         "df['category'].unique()"
       ],
-      "execution_count": 246,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -276,7 +287,7 @@
       "source": [
         "df['category'].value_counts()"
       ],
-      "execution_count": 247,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +322,7 @@
       "source": [
         "sbn.countplot(df['category'])"
       ],
-      "execution_count": 248,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -356,7 +367,7 @@
         "df[\"category\"] = LabelEncoder().fit_transform(df[\"category\"])\n",
         "df.head()"
       ],
-      "execution_count": 249,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +461,7 @@
         "final_features = vectorizer.fit_transform(df['text']).toarray()\n",
         "df.head()"
       ],
-      "execution_count": 250,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,7 +556,7 @@
         "print(y_train.shape)\n",
         "print(y_test.shape)"
       ],
-      "execution_count": 251,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,7 +607,7 @@
         "classifier.fit(X_train, y_train)\n",
         "score = classifier.score(X_test, y_test)\n"
       ],
-      "execution_count": 253,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,16 +626,16 @@
       "metadata": {
         "id": "s1MVhtqgmh1B",
         "colab_type": "code",
+        "outputId": "a445e0bb-1624-4d41-ace7-30fc7c283324",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a445e0bb-1624-4d41-ace7-30fc7c283324"
+        }
       },
       "source": [
         "print(\"Accuracy of Logistic Regression:\", score)"
       ],
-      "execution_count": 254,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,7 +715,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 258,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +755,7 @@
         "                    validation_split=0.10,\n",
         "                     batch_size=4)"
       ],
-      "execution_count": 259,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -872,7 +883,7 @@
         "loss, accuracy = model.evaluate(X_test, y_test, verbose=False)\n",
         "print(\"Testing Accuracy:  {:.4f}\".format(accuracy))"
       ],
-      "execution_count": 260,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -931,7 +942,7 @@
       "source": [
         "plot_history(history)"
       ],
-      "execution_count": 262,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -979,11 +990,11 @@
       "metadata": {
         "id": "Wg-MvkWtRei9",
         "colab_type": "code",
+        "outputId": "cf2f67db-0dcb-47b9-914d-65cab4c81147",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 323
-        },
-        "outputId": "cf2f67db-0dcb-47b9-914d-65cab4c81147"
+        }
       },
       "source": [
         "from sklearn import metrics\n",
@@ -996,7 +1007,7 @@
         "\n",
         "print(\"Accuracy of Deep Model is:\",accuracy_score(y_test_1d, y_pred_1d))\n"
       ],
-      "execution_count": 264,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
